[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
mobc = "0.7.3"
mobc-postgres = "0.7.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.2"
