[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
common = { version = "0.1.0", path = "../common" }
serde = "1.0.133"
serde_json = "1.0.74"
wasm-bindgen = "0.2.78"
yew = "0.19.3"
yew-router = "0.16.0"
